[Java] Remove reference to zip package.